<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ClickerCounter</string>
    <string name="action_settings">Settings</string>
    <string name="clickerCounterTitle">Welcome</string>
    <string name="newCounterButton">New Counter+</string>
    <string name="title_activity_display_counter">My ClickerCounter</string>
    <string name="hello_world">Hello world!</string>
    <string name="clickerCount">0</string>
    <string name="edit">Edit</string>
    <string name="changeName">Change Clicker Counter Name</string>
    <string name="placeHolder">Counter Name</string>
    <string name="deleteButton">Delete</string>
    <string name="resetButton">Reset</string>
    <string name="toolsTitle">Tools</string>
    <string name="title_activity_clicker_counter_stats">ClickerCounterStats</string>
<<<<<<< HEAD
<<<<<<< HEAD
    <string name="reorderButton">Order</string>
=======
=======
>>>>>>> parent of 8567919... App now resume from memery properly

>>>>>>> parent of 8567919... App now resume from memery properly
</resources>
